force-app/main/default/objects/Logs__c/Logs__c.object-meta.xml
<CustomObject>
    <label>Logs</label>
    <nameField>
        <displayFormat>LOG-{000000}</displayFormat>
        <label>Logs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>