force-app/main/default/objects/Logs__c/fields/Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class__c</fullName>
    <label>Apex Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Akamai_API</fullName>
            </value>
            <value>
                <fullName>ATG_API</fullName>
            </value>
            <value>
                <fullName>Ctrl_ProductCatalog</fullName>
            </value>
            <value>
                <fullName>Fractalist_API</fullName>
            </value>
            <value>
                <fullName>Google_Analytics_API</fullName>
            </value>
            <value>
                <fullName>ICX_GenesysExtensionPoint</fullName>
            </value>
            <value>
                <fullName>ICX_PurchasesExport</fullName>
            </value>
            <value>
                <fullName>ICX_WS_Client360</fullName>
            </value>
            <value>
                <fullName>ICX_WS_IXOPAY</fullName>
            </value>
            <value>
                <fullName>ICX_WS_Manual_Merge</fullName>
            </value>
            <value>
                <fullName>ICX_WS_NewsletterSubscription</fullName>
            </value>
            <value>
                <fullName>IDENTITY_AccountMatching_Utils</fullName>
            </value>
            <value>
                <fullName>IDENTITY_Login_CTRL</fullName>
            </value>
            <value>
                <fullName>IDENTITY_Registration_CTRL</fullName>
            </value>
            <value>
                <fullName>IDENTITY_RegistrationHandler</fullName>
            </value>
            <value>
                <fullName>IDENTITY_URLRewriter</fullName>
            </value>
            <value>
                <fullName>IDENTITY_UserManagement_BATCH</fullName>
            </value>
            <value>
                <fullName>IDENTITY_Utils</fullName>
            </value>
            <value>
                <fullName>IDENTITY_WS_AccountMatching</fullName>
            </value>
            <value>
                <fullName>IDENTITY_WS_Contactability</fullName>
            </value>
            <value>
                <fullName>IM_CheckPushNotifications</fullName>
            </value>
            <value>
                <fullName>IM_ClientListWS</fullName>
            </value>
            <value>
                <fullName>IM_FollowUp_WS</fullName>
            </value>
            <value>
                <fullName>IM_TeamManagment</fullName>
            </value>
            <value>
                <fullName>IM_WS_Assets</fullName>
            </value>
            <value>
                <fullName>IM_WS_CareService</fullName>
            </value>
            <value>
                <fullName>IM_WS_PushNotifications</fullName>
            </value>
            <value>
                <fullName>IM_WSAddCLMembers</fullName>
            </value>
            <value>
                <fullName>IM_WSConfig</fullName>
            </value>
            <value>
                <fullName>IM_WSRemoveCLMembers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>