force-app/main/default/objects/Logs__c/fields/API_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>API_Endpoint__c</fullName>
    <label>API Endpoint</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>