force-app/main/default/objects/Logs__c/fields/API_Headers__c.field-meta.xml
<CustomField>
    <fullName>API_Headers__c</fullName>
    <label>API Headers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>