force-app/main/default/objects/Logs__c/fields/API_Parameters__c.field-meta.xml
<CustomField>
    <fullName>API_Parameters__c</fullName>
    <label>API Parameters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>