force-app/main/default/objects/Logs__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MYLV</fullName>
            </value>
            <value>
                <fullName>LVAPP</fullName>
            </value>
            <value>
                <fullName>Distant Care Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>