force-app/main/default/objects/Logs__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <defaultValue>&apos;APEX CODE&apos;</defaultValue>
    <description>Database: 
Includes information about database activity, including every data manipulation language (DML) statement or inline SOQL or SOSL query.

Validation: 
Includes information about validation rules, required fields missing.

Callout:
API calls or troubleshooting user access to external API

Apex Code:
Includes information about Apex code. By default

Visualforce:
Includes information about Visualforce events

System:
Includes information about calls to all system methods

Event:
Includes information about events (email, sms, task … )

API:
External third party or Apex Custom REST API</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APEX CODE</fullName>
            </value>
            <value>
                <fullName>CALLOUT</fullName>
            </value>
            <value>
                <fullName>DATABASE</fullName>
            </value>
            <value>
                <fullName>SYSTEM</fullName>
            </value>
            <value>
                <fullName>VALIDATION</fullName>
            </value>
            <value>
                <fullName>VISUALFORCE</fullName>
            </value>
            <value>
                <fullName>EVENT</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>