force-app/main/default/objects/Logs__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <label>From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ICON</fullName>
            </value>
            <value>
                <fullName>SOCIAL MEDIA WEBSERVICE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>