force-app/main/default/objects/Logs__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <inlineHelpText>Exception Message Value</inlineHelpText>
    <label>Message</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>