force-app/main/default/objects/Logs__c/fields/Params__c.field-meta.xml
<CustomField>
    <fullName>Params__c</fullName>
    <label>Params</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>