force-app/main/default/objects/Logs__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <inlineHelpText>Important record data</inlineHelpText>
    <label>Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>