force-app/main/default/objects/Logs__c/fields/SFDC_Limits__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Limits__c</fullName>
    <label>Salesforce Limits</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>