force-app/main/default/objects/Logs__c/fields/Trace__c.field-meta.xml
<CustomField>
    <fullName>Trace__c</fullName>
    <inlineHelpText>Exception Trace Value</inlineHelpText>
    <label>Trace</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>