force-app/main/default/objects/Logs__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>Exception Type Value</inlineHelpText>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>