force-app/main/default/objects/Logs__c/listViews/Akamai_API_Error.listView-meta.xml
<ListView>
    <fullName>Akamai_API_Error</fullName>
    <columns>NAME</columns>
    <columns>API_Endpoint__c</columns>
    <columns>API_Request__c</columns>
    <columns>From__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Apex_Class__c</field>
        <operation>equals</operation>
        <value>Akamai_API</value>
    </filters>
    <label>Akamai_API Error</label>
    <language>en_US</language>
</ListView>