force-app/main/default/objects/Logs__c/listViews/Batch_disable_user_Identity.listView-meta.xml
<ListView>
    <fullName>Batch_disable_user_Identity</fullName>
    <columns>NAME</columns>
    <columns>Apex_Class__c</columns>
    <columns>Level__c</columns>
    <columns>Category__c</columns>
    <columns>Message__c</columns>
    <columns>Record_Id__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Apex_Class__c</field>
        <operation>equals</operation>
        <value>IDENTITY_UserManagement_BATCH</value>
    </filters>
    <label>Batch disable user Identity</label>
</ListView>