force-app/main/default/objects/Logs__c/listViews/ERROR.listView-meta.xml
<ListView>
    <fullName>ERROR</fullName>
    <columns>NAME</columns>
    <columns>Apex_Class__c</columns>
    <columns>Category__c</columns>
    <columns>Status_Code__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Other_Details__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Level__c</field>
        <operation>equals</operation>
        <value>ERROR</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>5/28/2023 12:00 AM</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessOrEqual</operation>
        <value>5/29/2023 12:00 AM</value>
    </filters>
    <label>ERROR</label>
</ListView>