force-app/main/default/objects/Logs__c/listViews/ERROR_SF_Identity.listView-meta.xml
<ListView>
    <fullName>ERROR_SF_Identity</fullName>
    <columns>NAME</columns>
    <columns>Apex_Class__c</columns>
    <columns>Status_Code__c</columns>
    <columns>Record_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>identity</value>
    </filters>
    <filters>
        <field>Level__c</field>
        <operation>equals</operation>
        <value>ERROR</value>
    </filters>
    <label>ERROR SF Identity</label>
</ListView>