force-app/main/default/objects/Logs__c/listViews/ICON_Error.listView-meta.xml
<ListView>
    <fullName>ICON_Error</fullName>
    <columns>NAME</columns>
    <columns>ClassName__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Duration__c</columns>
    <columns>Error__c</columns>
    <columns>Request_URI__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ClassName__c</field>
        <operation>startsWith</operation>
        <value>BL_</value>
    </filters>
    <filters>
        <field>Has_Error__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>3/24/2021 10:44 AM</value>
    </filters>
    <label>ICON Error</label>
</ListView>