force-app/main/default/objects/Logs__c/listViews/INFO.listView-meta.xml
<ListView>
    <fullName>INFO</fullName>
    <columns>NAME</columns>
    <columns>Apex_Class__c</columns>
    <columns>Category__c</columns>
    <columns>Message__c</columns>
    <columns>Record_Id__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Level__c</field>
        <operation>equals</operation>
        <value>INFO</value>
    </filters>
    <filters>
        <field>Apex_Class__c</field>
        <operation>equals</operation>
        <value>IDENTITY_Registration_CTRL</value>
    </filters>
    <label>INFO</label>
</ListView>