force-app/main/default/objects/Logs__c/listViews/INVALID_VERIFICATION_CODE.listView-meta.xml
<ListView>
    <fullName>INVALID_VERIFICATION_CODE</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status_Code__c</columns>
    <columns>Record_Id__c</columns>
    <columns>Other_Details__c</columns>
    <columns>Error__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status_Code__c</field>
        <operation>equals</operation>
        <value>INVALID_VERIFICATION_CODE</value>
    </filters>
    <filters>
        <field>Record_Id__c</field>
        <operation>contains</operation>
        <value>nissaraporn.tippachat@louisvuitton.com</value>
    </filters>
    <label>INVALID_VERIFICATION_CODE</label>
    <language>en_US</language>
</ListView>