force-app/main/default/objects/Logs__c/listViews/MyCC.listView-meta.xml
<ListView>
    <fullName>MyCC</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Category__c</columns>
    <columns>Message__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Apex_Class__c</field>
        <operation>equals</operation>
        <value>MYCC_WS_Client</value>
    </filters>
    <label>MyCC</label>
    <language>en_US</language>
</ListView>