force-app/main/default/objects/Logs__c/listViews/Notifications.listView-meta.xml
<ListView>
    <fullName>Notifications</fullName>
    <columns>NAME</columns>
    <columns>Level__c</columns>
    <columns>Category__c</columns>
    <columns>Application__c</columns>
    <columns>Status_Code__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Apex_Class__c</field>
        <operation>equals</operation>
        <value>Notification_Sender</value>
    </filters>
    <label>Notifications</label>
    <language>en_US</language>
</ListView>