force-app/main/default/objects/Logs__c/listViews/SMI.listView-meta.xml
<ListView>
    <fullName>SMI</fullName>
    <columns>NAME</columns>
    <columns>Message__c</columns>
    <columns>API_Request__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Apex_Class__c</field>
        <operation>equals</operation>
        <value>SM_WS01_SocialMediaIdentifiers</value>
    </filters>
    <label>SMI</label>
    <language>en_US</language>
</ListView>