force-app/main/default/objects/Logs__c/listViews/Social_Login.listView-meta.xml
<ListView>
    <fullName>Social_Login</fullName>
    <columns>NAME</columns>
    <columns>Level__c</columns>
    <columns>Category__c</columns>
    <columns>Message__c</columns>
    <columns>Record_Id__c</columns>
    <columns>Other_Details__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Apex_Class__c</field>
        <operation>equals</operation>
        <value>IDENTITY_Registration_CTRL</value>
    </filters>
    <label>Social Login</label>
</ListView>