force-app/main/default/objects/Logs__c/listViews/WARN.listView-meta.xml
<ListView>
    <fullName>WARN</fullName>
    <columns>NAME</columns>
    <columns>Apex_Class__c</columns>
    <columns>Category__c</columns>
    <columns>Message__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Level__c</field>
        <operation>equals</operation>
        <value>WARN</value>
    </filters>
    <label>WARN</label>
    <language>en_US</language>
</ListView>